--- a/mirum/src/index.css
+++ b/mirum/src/index.css
@@ -1,5 +1,5 @@
 body {
-  background-color: #25172A;
+  background-color: #25172A !important;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -14,19 +14,13 @@ code {
 }
 
 .tsparticles-canvas-el {
-  z-index: -1;
   position: fixed;
+  z-index: -1;
 }
 
 main {
   height: 100vh;
 }
 
-button {
-  font-size: 48px;
-  color: white;
-  border: none;
-  background-color: transparent;
-  width: 100px;
-  height: 40px;
-}
+
+
