--- a/mirum/src/screens/HomeUser/HomeUser.scss
+++ b/mirum/src/screens/HomeUser/HomeUser.scss
@@ -1,5 +1,5 @@
 .container__home {  
-  padding-top: 300px;
+  padding-top: 20%;
   display: flex;
   align-items: center;
   justify-content: space-around;
