--- a/mirum/src/components/FormUser/FormUser.scss
+++ b/mirum/src/components/FormUser/FormUser.scss
@@ -1,7 +1,44 @@
-label {
-  color: rgb(2, 227, 235);
+p {
+  padding-right: 30px;
+}
+.section__field {
+  padding: 20px 0px;
+  display: flex;
+  align-items: center;
+}
+.form {
+  select {
+    width: 200px;
+    height: 24px;
+    color: black;
+    background-color: #e8f0fe;
+    border-radius: 4px;
+    border: 1px solid black;
+    margin: 5px;
+  }
+  input {
+    width: 200px;
+    height: 20px;
+    color: black;
+    background-color: #e8f0fe;
+    border-radius: 4px;
+    border: 1px solid black;
+    margin: 5px;
+  }
 }
 
-.section__field {
-  display: flex;
+::placeholder {
+  /* Chrome, Firefox, Opera, Safari 10.1+ */
+  color: black;
+  opacity: 1; /* Firefox */
+}
+
+:-ms-input-placeholder {
+  /* Internet Explorer 10-11 */
+  color: black;
+}
+
+::-ms-input-placeholder {
+  /* Microsoft Edge */
+  color: black;
 }
