--- a/mirum/src/screens/Register/Register.scss
+++ b/mirum/src/screens/Register/Register.scss
@@ -1,23 +1,28 @@
 .container {
   &__register {
-    background-color: #25172a;
+    font-size: 20px;
+    color: white;
+    background-color: #25172A !important;
+
     margin: auto;
-    width: 60%;
+    width: 50%;
     height: 100vh;
-    /* padding-top: 300px; */
+    padding-top: 100px; 
     display: flex;
     align-items: center;
-    justify-content: center;
-    flex-direction: row;
+    // justify-content: flex-end;
+    // flex-direction: row;
   }
   &__picture {
+    background-color: #25172A !important;
+
     height: 100vh;
     width: 65%;
     border-right: solid 1px gray;
   }
   &__form {
-    display: flex;
-    justify-content: center;
+    // display: flex;
+    // justify-content: flex-end;
     width: 100%;
     height: 100vh;
   }
