--- a/mirum/src/screens/HomeUser/HomeUser.scss
+++ b/mirum/src/screens/HomeUser/HomeUser.scss
@@ -1,9 +1,10 @@
 .container__home {  
-  padding-top: 20%;
+  margin-top: 20%;
   display: flex;
   align-items: center;
   justify-content: space-around;
   flex-direction: column;
+  z-index: 10;
   .container__button {
     margin-top: 60px;
   }
