--- a/mirum/src/screens/Register/Register.scss
+++ b/mirum/src/screens/Register/Register.scss
@@ -1,29 +1,25 @@
 .container {
   &__register {
-    font-size: 20px;
-    color: white;
-    background-color: #25172A !important;
-
-    margin: auto;
-    width: 50%;
-    height: 100vh;
-    padding-top: 100px; 
     display: flex;
-    align-items: center;
-    // justify-content: flex-end;
-    // flex-direction: row;
-  }
-  &__picture {
-    background-color: #25172A !important;
+    height: 600px;
+    width: 1000px;
+    background-color: white;
+    margin: 6% 20%;
+    border-radius: 10px;
+    // justify-content: center;
+    z-index: 10;
 
-    height: 100vh;
-    width: 65%;
-    border-right: solid 1px gray;
   }
-  &__form {
-    // display: flex;
-    // justify-content: flex-end;
-    width: 100%;
-    height: 100vh;
-  }
+ &__form {
+  //  margin-top: 6%;
+   width: 600px;
+ }
+  
+}
+.vertical__row {
+  margin-top: 1%;
+  height: 80%;
+  width: 1px;
+  background-color: gray;
+
 }
