--- a/mirum/src/index.css
+++ b/mirum/src/index.css
@@ -1,26 +1,28 @@
 body {
-  background-color: #25172A !important;
+  background-color: #25172a !important;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
 
 .tsparticles-canvas-el {
   position: fixed;
-  z-index: -1;
+  /* z-index: 1; */
 }
 
 main {
-  height: 100vh;
+  z-index: 10;
+  display: flex;
+  justify-content: center;
 }
-
-
-
+.container__home {
+  z-index: 10;
+}
