--- a/mirum/src/components/FormUser/FormUser.scss
+++ b/mirum/src/components/FormUser/FormUser.scss
@@ -16,16 +16,18 @@ p {
     div {
       margin-left: 5%;
     }
-  
+   
     select {
       width: 200px;
       height: 24px;
-      color: black;
       background-color: #e8f0fe;
       border-radius: 4px;
       border: 1px solid black;
       margin: 5px;
     }
+   
+    
+    
     input {
       // width: 200px;
       height: 20px;
@@ -61,19 +63,18 @@ p {
 }
 #button {
   margin-top: 8%;
-  color: #2a2317;
   border: none;
-  background-color: transparent;
+  background-color: #449DD1;
+  color: black;
   font-size: 20px;
   border-radius: 30px;
   width: 30%;
   height: 40px;
-  background-color: #7c8ae3;
   letter-spacing: 1px;
   &:hover {
-    color: black;
+    color: white;
 
-    background-color: #03e6ff;
+    background-color: #192BC2;
     
     cursor: pointer;
     border-radius: 30px;
