--- a/mirum/src/screens/Confirm/Confirm.scss
+++ b/mirum/src/screens/Confirm/Confirm.scss
@@ -17,12 +17,13 @@
 .container {
   &__resume {
     display: flex;
-    height: 600px;
+    height: 550px;
     width: 1000px;
     background-color: white;
     margin: 6% 20%;
     border-radius: 10px;
     justify-content: center;
+    align-items: center;
     z-index: 10;
 
   }
